# capnproto

c++/: WORKSPACE
c++/src/capnp/: BUILD.bazel
c++/src/capnp/compiler/wasm/: BUILD.bazel  capnp_inner.c++  capnp_inner.h  capnp_outer.c++
c++/src/kj/: exception.c++  mutex.c++
